// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ValidateRecipientAccount renders correctly when full validation required 1`] = `
[
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
        "justifyContent": "space-between",
        "paddingHorizontal": 16,
      }
    }
    keyboardShouldPersistTaps="always"
    testID="KeyboardAwareScrollView"
  >
    <View>
      <View>
        <Text
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
              "paddingVertical": 16,
            }
          }
          testID="ConfirmAccountNumber/Title"
        >
          confirmAccountNumber.title
        </Text>
        <View>
          <View>
            <Text
              style={
                {
                  "color": "#2E3338",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 16,
                  "lineHeight": 22,
                  "paddingBottom": 16,
                }
              }
            >
              confirmAccountNumber.body1Full, {"displayName":"Jane Doe"}
            </Text>
            <Text
              style={
                {
                  "color": "#2E3338",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 16,
                  "lineHeight": 22,
                  "paddingBottom": 16,
                }
              }
            >
              confirmAccountNumber.body2Full
            </Text>
            <Text
              style={
                {
                  "color": "#2E3338",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 14,
                  "lineHeight": 18,
                  "paddingVertical": 8,
                }
              }
            >
              accountInputHeaderFull
            </Text>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flex": 1,
                    "flexDirection": "row",
                    "gap": 8,
                    "justifyContent": "center",
                  },
                  {
                    "backgroundColor": "#FFF",
                    "borderColor": "#E6E6E6",
                    "borderRadius": 3,
                    "borderWidth": 1,
                    "flex": 0,
                    "height": 50,
                    "marginVertical": 5,
                  },
                ]
              }
            >
              <TextInput
                onBlur={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                placeholder="0xf1b1d5a6e7728g309c4a025k122d71ad75a61976"
                shouldShowClipboard={[Function]}
                style={
                  [
                    {
                      "color": "#2E3338",
                      "flex": 1,
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "lineHeight": 22,
                      "paddingHorizontal": 0,
                      "paddingVertical": 12,
                    },
                    undefined,
                    undefined,
                  ]
                }
                testID="ValidateRecipientAccount/TextInput"
                value=""
              />
            </View>
          </View>
        </View>
        <View
          style={
            {
              "height": 64,
            }
          }
        />
        <View
          style={
            [
              {
                "flexDirection": "row",
              },
              {
                "paddingVertical": 16,
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "overflow": "hidden",
                },
                {
                  "borderRadius": 100,
                },
              ]
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": true,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              focusable={false}
              nativeBackgroundAndroid={
                {
                  "attribute": "selectableItemBackground",
                  "rippleRadius": undefined,
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#2E3338",
                    "flexDirection": "row",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 120,
                    "opacity": 0.25,
                    "paddingHorizontal": 24,
                    "paddingVertical": 5,
                  },
                  undefined,
                ]
              }
              testID="ConfirmAccountButton"
            >
              <Text
                maxFontSizeMultiplier={1}
                style={
                  {
                    "color": "#FFFFFF",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 24,
                    "marginLeft": 0,
                    "marginRight": 0,
                  }
                }
              >
                confirmAccountNumber.submit
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "paddingBottom": 24,
          }
        }
      >
        <svg
          fill="none"
          height={16}
          viewBox="0 0 16 16"
          width={16}
        >
          <circle
            cx="8"
            cy="8"
            r="7"
            stroke="#2E3338"
            strokeWidth="1.25"
          />
          <path
            d="M8 12V7M8 6V5"
            stroke="#2E3338"
            strokeWidth="1.25"
          />
        </svg>
        <Text
          onPress={[Function]}
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 14,
              "lineHeight": 18,
              "paddingLeft": 8,
              "textDecorationLine": "underline",
            }
          }
        >
          confirmAccountNumber.help, {"displayName":"Jane Doe"}
        </Text>
      </View>
    </View>
  </RCTScrollView>,
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "right": 0,
        },
        {
          "height": 0,
        },
        undefined,
      ]
    }
  />,
  <Modal
    animationType="none"
    deviceHeight={1334}
    deviceWidth={null}
    hardwareAccelerated={false}
    hideModalContentWhileAnimating={false}
    onBackdropPress={[Function]}
    onModalHide={[Function]}
    onModalWillHide={[Function]}
    onModalWillShow={[Function]}
    onRequestClose={[Function]}
    panResponderThreshold={4}
    scrollHorizontal={false}
    scrollOffset={0}
    scrollOffsetMax={0}
    scrollTo={null}
    statusBarTranslucent={true}
    supportedOrientations={
      [
        "portrait",
        "landscape",
      ]
    }
    swipeThreshold={100}
    transparent={true}
    visible={false}
  />,
]
`;

exports[`ValidateRecipientAccount renders correctly when partial validation required 1`] = `
[
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
        "justifyContent": "space-between",
        "paddingHorizontal": 16,
      }
    }
    keyboardShouldPersistTaps="always"
    testID="KeyboardAwareScrollView"
  >
    <View>
      <View>
        <Text
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
              "paddingVertical": 16,
            }
          }
          testID="ConfirmAccountNumber/Title"
        >
          confirmAccountNumber.title
        </Text>
        <View>
          <View>
            <Text
              style={
                {
                  "color": "#2E3338",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 16,
                  "lineHeight": 22,
                  "paddingBottom": 16,
                }
              }
            >
              confirmAccountNumber.bodyPartial, {"displayName":"Jane Doe"}
            </Text>
            <Text
              style={
                {
                  "color": "#2E3338",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 14,
                  "lineHeight": 18,
                  "paddingVertical": 8,
                }
              }
            >
              accountInputHeaderPartial
            </Text>
            <View
              style={
                {
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "paddingRight": 8,
                  }
                }
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "flex": 1,
                        "flexDirection": "row",
                        "gap": 8,
                        "justifyContent": "center",
                      },
                      {
                        "backgroundColor": "#FFF",
                        "borderColor": "#E6E6E6",
                        "borderRadius": 3,
                        "borderWidth": 1,
                        "flex": 0,
                        "height": 50,
                        "marginVertical": 5,
                        "width": 50,
                      },
                    ]
                  }
                >
                  <TextInput
                    maxLength={1}
                    multiline={true}
                    onBlur={[Function]}
                    onChangeText={[Function]}
                    onFocus={[Function]}
                    placeholder="a"
                    style={
                      [
                        {
                          "color": "#2E3338",
                          "flex": 1,
                          "fontFamily": "Inter-Regular",
                          "fontSize": 16,
                          "lineHeight": 22,
                          "paddingHorizontal": 0,
                          "paddingVertical": 12,
                        },
                        {
                          "textAlignVertical": "top",
                        },
                        undefined,
                      ]
                    }
                    testID="SingleDigitInput/digit0"
                    textAlign="center"
                    value=""
                  />
                </View>
              </View>
              <View
                style={
                  {
                    "paddingRight": 8,
                  }
                }
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "flex": 1,
                        "flexDirection": "row",
                        "gap": 8,
                        "justifyContent": "center",
                      },
                      {
                        "backgroundColor": "#FFF",
                        "borderColor": "#E6E6E6",
                        "borderRadius": 3,
                        "borderWidth": 1,
                        "flex": 0,
                        "height": 50,
                        "marginVertical": 5,
                        "width": 50,
                      },
                    ]
                  }
                >
                  <TextInput
                    maxLength={1}
                    multiline={true}
                    onBlur={[Function]}
                    onChangeText={[Function]}
                    onFocus={[Function]}
                    placeholder="0"
                    style={
                      [
                        {
                          "color": "#2E3338",
                          "flex": 1,
                          "fontFamily": "Inter-Regular",
                          "fontSize": 16,
                          "lineHeight": 22,
                          "paddingHorizontal": 0,
                          "paddingVertical": 12,
                        },
                        {
                          "textAlignVertical": "top",
                        },
                        undefined,
                      ]
                    }
                    testID="SingleDigitInput/digit1"
                    textAlign="center"
                    value=""
                  />
                </View>
              </View>
              <View
                style={
                  {
                    "paddingRight": 8,
                  }
                }
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "flex": 1,
                        "flexDirection": "row",
                        "gap": 8,
                        "justifyContent": "center",
                      },
                      {
                        "backgroundColor": "#FFF",
                        "borderColor": "#E6E6E6",
                        "borderRadius": 3,
                        "borderWidth": 1,
                        "flex": 0,
                        "height": 50,
                        "marginVertical": 5,
                        "width": 50,
                      },
                    ]
                  }
                >
                  <TextInput
                    maxLength={1}
                    multiline={true}
                    onBlur={[Function]}
                    onChangeText={[Function]}
                    onFocus={[Function]}
                    placeholder="F"
                    style={
                      [
                        {
                          "color": "#2E3338",
                          "flex": 1,
                          "fontFamily": "Inter-Regular",
                          "fontSize": 16,
                          "lineHeight": 22,
                          "paddingHorizontal": 0,
                          "paddingVertical": 12,
                        },
                        {
                          "textAlignVertical": "top",
                        },
                        undefined,
                      ]
                    }
                    testID="SingleDigitInput/digit2"
                    textAlign="center"
                    value=""
                  />
                </View>
              </View>
              <View
                style={
                  {
                    "paddingRight": 8,
                  }
                }
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "flex": 1,
                        "flexDirection": "row",
                        "gap": 8,
                        "justifyContent": "center",
                      },
                      {
                        "backgroundColor": "#FFF",
                        "borderColor": "#E6E6E6",
                        "borderRadius": 3,
                        "borderWidth": 1,
                        "flex": 0,
                        "height": 50,
                        "marginVertical": 5,
                        "width": 50,
                      },
                    ]
                  }
                >
                  <TextInput
                    maxLength={1}
                    multiline={true}
                    onBlur={[Function]}
                    onChangeText={[Function]}
                    onFocus={[Function]}
                    placeholder="4"
                    style={
                      [
                        {
                          "color": "#2E3338",
                          "flex": 1,
                          "fontFamily": "Inter-Regular",
                          "fontSize": 16,
                          "lineHeight": 22,
                          "paddingHorizontal": 0,
                          "paddingVertical": 12,
                        },
                        {
                          "textAlignVertical": "top",
                        },
                        undefined,
                      ]
                    }
                    testID="SingleDigitInput/digit3"
                    textAlign="center"
                    value=""
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "height": 64,
            }
          }
        />
        <View
          style={
            [
              {
                "flexDirection": "row",
              },
              {
                "paddingVertical": 16,
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "overflow": "hidden",
                },
                {
                  "borderRadius": 100,
                },
              ]
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": true,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              focusable={false}
              nativeBackgroundAndroid={
                {
                  "attribute": "selectableItemBackground",
                  "rippleRadius": undefined,
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#2E3338",
                    "flexDirection": "row",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 120,
                    "opacity": 0.25,
                    "paddingHorizontal": 24,
                    "paddingVertical": 5,
                  },
                  undefined,
                ]
              }
              testID="ConfirmAccountButton"
            >
              <Text
                maxFontSizeMultiplier={1}
                style={
                  {
                    "color": "#FFFFFF",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 24,
                    "marginLeft": 0,
                    "marginRight": 0,
                  }
                }
              >
                confirmAccountNumber.submit
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "paddingBottom": 24,
          }
        }
      >
        <svg
          fill="none"
          height={16}
          viewBox="0 0 16 16"
          width={16}
        >
          <circle
            cx="8"
            cy="8"
            r="7"
            stroke="#2E3338"
            strokeWidth="1.25"
          />
          <path
            d="M8 12V7M8 6V5"
            stroke="#2E3338"
            strokeWidth="1.25"
          />
        </svg>
        <Text
          onPress={[Function]}
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 14,
              "lineHeight": 18,
              "paddingLeft": 8,
              "textDecorationLine": "underline",
            }
          }
        >
          confirmAccountNumber.help, {"displayName":"Jane Doe"}
        </Text>
      </View>
    </View>
  </RCTScrollView>,
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "right": 0,
        },
        {
          "height": 0,
        },
        undefined,
      ]
    }
  />,
  <Modal
    animationType="none"
    deviceHeight={1334}
    deviceWidth={null}
    hardwareAccelerated={false}
    hideModalContentWhileAnimating={false}
    onBackdropPress={[Function]}
    onModalHide={[Function]}
    onModalWillHide={[Function]}
    onModalWillShow={[Function]}
    onRequestClose={[Function]}
    panResponderThreshold={4}
    scrollHorizontal={false}
    scrollOffset={0}
    scrollOffsetMax={0}
    scrollTo={null}
    statusBarTranslucent={true}
    supportedOrientations={
      [
        "portrait",
        "landscape",
      ]
    }
    swipeThreshold={100}
    transparent={true}
    visible={false}
  />,
]
`;
